tests/integration/errors/test_interface_missing_method.sn
# Error test: struct passed as interface parameter but missing required method

interface Comparable =>
  fn compare(other: Self): int

fn check(a: Comparable): void => return

struct Box =>
  size: int

fn main(): int =>
  var a: Box = { size: 1 }
  check(a)
  return 0
